add small_business page
- add small_business page
- minor fixes

--- a/internet-business.html
+++ b/internet-business.html
@@ -390,8 +390,8 @@
               </div>
             </section>
             <section class="request">
-              <div class="request-title">Оформите заявку на эквайринг</div>
-              <div class="request-desc"></div>
+              <div class="request-title">Откройте счет за 10 минут</div>
+              <div class="request-desc">и принимайте платежи сразу</div>
               <form id="open_account_step1_page">
                 <div class="request-block">
                   <div class="request-block-phone">
