--- a/small_business.html
+++ b/small_business.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Фрилансер</title>
+    <title>Для малого бизнеса</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,9 +118,9 @@
         </ul>
       </header>
       <main>
-        <div class="freelancer-page">
+        <div class="small-business-page">
           <div class="inner">
-            <section class="top-banner">
+            <section class="top-banner pr100">
               <div class="top-banner-content">
                 <ul class="top-banner-content-breadcrumbs list-unstyled">
                   <li class="bx-breadcrumb-item">
@@ -129,12 +129,12 @@
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <span>Фрилансер</span>
+                    <span>Для малого бизнеса</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Фрилансер</h1>
-                  <div class="top-banner-content-text-desc">Все лучшее у нас</div>
+                  <h1 class="top-banner-content-text-title">Для малого бизнеса</h1>
+                  <div class="top-banner-content-text-desc">Делокасса, эйкваринг, облачная бухгалтерия</div>
                   <div class="top-banner-content-text-open">
                     <a href="#">Открыть счет</a>
                   </div>
@@ -142,59 +142,76 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/freelancer/top_banner_img1.png" title="Фрилансер" alt="Фрилансер">
+                <img src="img/small_business/top_banner_img1.png" title="Для малого бизнеса" alt="Для малого бизнеса">
               </div>
             </section>
             <section class="services">
               <div class="services-block">
                 <div class="services-block-item">
                   <div class="services-block-item-content">
-                    <div class="services-block-item-content-title">Облачная бухгалтерия</div>
+                    <div class="services-block-item-content-title">ДелоКасса</div>
                     <div class="services-block-item-content-desc">
-                      Сервис сам рассчитает <br>
-                      платежи, создаст платежки <br>
-                      и напомнит заплатить все <br>
-                      в срок
+                      Ведите учет товаров/услуг <br>
+                      и принимайте оплату <br>
+                      наличными или <br>
+                      банковскими картами
                     </div>
                     <div class="services-block-item-content-detail">
                       <a href="/"><span>Подробнее</span></a>
                     </div>
                   </div>
                   <div class="services-block-item-image">
-                    <img src="img/services_account.png" alt="">
+                    <img src="img/services_delokassa.png" alt="">
                   </div>
                 </div>
                 <div class="services-block-item">
                   <div class="services-block-item-content">
-                    <div class="services-block-item-content-title">1C: ДиректБанк</div>
+                    <div class="services-block-item-content-title">Онлайн депозит</div>
                     <div class="services-block-item-content-desc">
-                      Управляйте <br>
-                      расчетными <br>
-                      счетами прямо <br>
-                      из  системы «1С
+                      Самый простой <br>
+                      и надежный способ <br>
+                      получить <br>
+                      дополнительный доход
                     </div>
                     <div class="services-block-item-content-detail">
                       <a href="/"><span>Подробнее</span></a>
                     </div>
                   </div>
                   <div class="services-block-item-image">
-                    <img src="img/services_direktbank.png" alt="">
+                    <img src="img/services_deposit.png" alt="">
                   </div>
                 </div>
                 <div class="services-block-item">
                   <div class="services-block-item-content">
-                    <div class="services-block-item-content-title">Дебетовая карта</div>
+                    <div class="services-block-item-content-title">Интернет-эквайринг</div>
                     <div class="services-block-item-content-desc">
-                      Удобная карта на каждый <br>
-                      день с функцией <br>
-                      бесконтактной оплаты
+                      Принимайте оплату <br>
+                      на вашем сайте <br>
+                      по банковским картам
+                      </div>
+                    <div class="services-block-item-content-detail">
+                      <a href="/acquiring/internet-acquiring/"><span>Подробнее</span></a>
+                    </div>
+                  </div>
+                  <div class="services-block-item-image">
+                    <img src="img/services_internet_acquiring.png" alt="">
+                  </div>
+                </div>
+                <div class="services-block-item">
+                  <div class="services-block-item-content">
+                    <div class="services-block-item-content-title">Овердрафт</div>
+                    <div class="services-block-item-content-desc">
+                      Если у вас подключен <br>
+                      овердрафт, вы можете <br>
+                      потратить больше денег, <br>
+                      чем есть на счете
                     </div>
                     <div class="services-block-item-content-detail">
                       <a href="/"><span>Подробнее</span></a>
                     </div>
                   </div>
                   <div class="services-block-item-image">
-                    <img src="img/services_debit_card.png" alt="">
+                    <img src="img/services_overdraft.png" alt="">
                   </div>
                 </div>
                 <div class="services-block-item">
@@ -214,35 +231,51 @@
                 </div>
                 <div class="services-block-item">
                   <div class="services-block-item-content">
-                    <div class="services-block-item-content-title">Прием оплаты по ссылке</div>
+                    <div class="services-block-item-content-title">Помощь юриста</div>
                     <div class="services-block-item-content-desc">
-                      Получайте оплату <br>
-                      от клиентов <br>
-                      по ссылке-счету
+                      Не тратьте время <br>
+                      на изучение <br>
+                      юридических <br>
+                      тонкостей
                     </div>
                     <div class="services-block-item-content-detail">
                       <a href="/"><span>Подробнее</span></a>
                     </div>
                   </div>
                   <div class="services-block-item-image">
-                    <img src="img/services_payment2.png" alt="">
+                    <img src="img/services_legal_advice.png" alt="">
                   </div>
                 </div>
                 <div class="services-block-item">
-                  <div class="services-block-item-badge">Бонусы</div>
                   <div class="services-block-item-content">
-                    <div class="services-block-item-content-title">Бонусная <br>программа</div>
+                    <div class="services-block-item-content-title">Облачная бухгалтерия</div>
                     <div class="services-block-item-content-desc">
-                      Для новых <br>
-                      клиентов <br>
-                      ДелоБанка
+                      Сервис сам рассчитает <br>
+                      платежи, создаст платежки <br>
+                      и напомнит заплатить все <br>
+                      в срок
                     </div>
                     <div class="services-block-item-content-detail">
                       <a href="/"><span>Подробнее</span></a>
                     </div>
                   </div>
                   <div class="services-block-item-image">
-                    <img src="img/services_bonus.png" alt="">
+                    <img src="img/services_account.png" alt="">
+                  </div>
+                </div>
+                <div class="services-block-item">
+                  <div class="services-block-item-content">
+                    <div class="services-block-item-content-title">Зарплатный проект</div>
+                    <div class="services-block-item-content-desc">
+                      Обслуживание карт <br>
+                      ваших сотрудников
+                    </div>
+                    <div class="services-block-item-content-detail">
+                      <a href="/"><span>Подробнее</span></a>
+                    </div>
+                  </div>
+                  <div class="services-block-item-image">
+                    <img src="img/services_salary_project.png" alt="">
                   </div>
                 </div>
               </div>
