add debit_card page
- add debit_card page
- minor fixes

--- a/debit-card.html
+++ b/debit-card.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Интернет-Эквайринг</title>
+    <title>Дебетовая карта</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,7 +118,7 @@
         </ul>
       </header>
       <main>
-        <div class="acquiring-detail-page internet-acquiring">
+        <div class="debit-card-page">
           <div class="inner">
             <section class="top-banner pr50">
               <div class="top-banner-content">
@@ -129,18 +129,18 @@
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <a href="#" title="Эквайринг" itemprop="item">
-                      <span itemprop="name">Эквайринг</span>
+                    <a href="/">
+                      <span>Фрилансер</span>
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <span>Интернет-эквайринг</span>
+                    <span>Дебетовая карта</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Интернет-Эквайринг</h1>
+                  <h1 class="top-banner-content-text-title">Дебетовая карта</h1>
                   <div class="top-banner-content-text-desc">
-                    Принимайте оплату в интернет-магазине и на сайте
+                    Удобная карта на каждый день с функцией бесконтактной оплаты
                   </div>
                   <div class="top-banner-content-text-open">
                     <a href="#">Открыть счет</a>
@@ -149,101 +149,47 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/acquiring/top_banner_img3.png" title="Фрилансер" alt="Фрилансер">
+                <img src="img/debit_card/top_banner_img1.png" title="Дебетовая карта" alt="Дебетовая карта">
               </div>
             </section>
             <section class="advantage">
-              <div class="advantage-title">Преимущества интернет-эквайринга</div>
-              <div class="advantage-desc"></div>
-                <div class="advantage-block">
-                  <div class="advantage-block-item">
-                    <div class="advantage-block-item-text">
-                      <div class="advantage-block-item-text-desc">
-                        Подключение — <br>
-                        бесплатно
-                      </div>
-                    </div>
-                    <div class="advantage-block-item-image">
-                      <img src="img/adv_img7.png" alt="Подключение — бесплатно">
-                    </div>
+              <div class="advantage-block">
+                <div class="advantage-block-item">
+                  <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-title">5,75%</div>
+                    <div class="advantage-block-item-text-desc">На остаток свыше 30 000 ₽</div>
                   </div>
-                  <div class="advantage-block-item">
-                    <div class="advantage-block-item-text">
-                      <div class="advantage-block-item-text-desc">
-                        Простая интеграция <br>
-                        с сайтом
-                      </div>
-                    </div>
-                    <div class="advantage-block-item-image">
-                      <img src="img/adv_img10.png" alt="Простая интеграция с сайтом">
-                    </div>
-                  </div>
-                  <div class="advantage-block-item">
-                    <div class="advantage-block-item-text">
-                      <div class="advantage-block-item-text-desc">
-                        Все платежи <br>
-                        защищены
-                      </div>
-                    </div>
-                    <div class="advantage-block-item-image">
-                      <img src="img/adv_img11.png" alt="Все платежи защищены">
-                    </div>
+                  <div class="advantage-block-item-image">
+                    <img src="img/adv_img15.png" alt="Зачисляет денежные средства на счет каждые 4 часа или в удобное для вас время">
                   </div>
                 </div>
-            </section>
-            <section class="how-much">
-              <div class="how-much-title">Сколько стоит</div>
-              <div class="how-much-block">
-                <div class="how-much-block-table">
-                  <div class="how-much-block-table-title">Комиссия от оборота</div>
-                  <div class="how-much-block-table-line">
-                    <div class="how-much-block-table-line-desc">от 500 000 ₽/мес</div>
-                    <div class="how-much-block-table-line-value">1,9%</div>
+                <div class="advantage-block-item">
+                  <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-title">до 0,5%</div>
+                    <div class="advantage-block-item-text-desc">Возвращаем на счет</div>
                   </div>
-                  <div class="how-much-block-table-line">
-                    <div class="how-much-block-table-line-desc">до 500 000 ₽/мес</div>
-                    <div class="how-much-block-table-line-value">2%</div>
-                  </div>
-                  <div class="how-much-block-table-line">
-                    <div class="how-much-block-table-line-desc">до 300 000 ₽/мес</div>
-                    <div class="how-much-block-table-line-value">2,1%</div>
-                  </div>
-                  <div class="how-much-block-table-line">
-                    <div class="how-much-block-table-line-desc">до 150 000 ₽/мес</div>
-                    <div class="how-much-block-table-line-value">2,2%</div>
+                  <div class="advantage-block-item-image">
+                    <img src="img/adv_img16.png" alt="Соответсвует требованиям 54–ФЗ">
                   </div>
                 </div>
-                <div class="how-much-block-text">
-                  <div class="how-much-block-text-title">Бесплатно</div>
-                  <ul class="how-much-block-text-list list-unstyled">
-                    <li>Подключение сервиса</li>
-                    <li>Интеграция сервиса с вашим сайтом</li>
-                    <li>Техническая поддержка</li>
-                  </ul>
-                  <div class="how-much-block-text-doc">
-                    <a href="#">Тариф на подключение услуги</a>
+                <div class="advantage-block-item">
+                  <div class="advantage-block-item-text">
+                    <div class="advantage-block-item-text-title">без комиссии</div>
+                    <div class="advantage-block-item-text-desc">Снимайте деньги в банкоматах банков-партнеров</div>
+                  </div>
+                  <div class="advantage-block-item-image">
+                    <img src="img/adv_img17.png" alt="Контролирует товарные остатки и работу сотрудников">
                   </div>
                 </div>
               </div>
             </section>
             <section class="payment-system">
               <div class="payment-system-text">
-                <div class="payment-system-text-title">Работаем с платежными системами</div>
                 <div class="payment-system-text-desc">
-                  Прием карт Mastercard, Visa, Мир.<br>
-                  Бесконтактная оплата
+                  Подключите карту к системам <a href="#">Apple Pay</a>, <a href="#">Samsung Pay</a> или <a href="#">Google Pay</a> и оплачивайте покупки смартфоном
                 </div>
               </div>
               <div class="payment-system-block">
-                <div class="payment-system-block-item">
-                  <img src="img/icon_mastercard.svg" alt="">
-                </div>
-                <div class="payment-system-block-item">
-                  <img src="img/icon_visa.svg" alt="">
-                </div>
-                <div class="payment-system-block-item">
-                  <img src="img/icon_mir.svg" alt="">
-                </div>
                 <div class="payment-system-block-item">
                   <img src="img/icon_applepay.svg" alt="">
                 </div>
@@ -255,71 +201,38 @@
                 </div>
               </div>
             </section>
-            <section class="steps">
-              <div class="steps-title">Как подключить?</div>
-              <div class="steps-block">
-                <div class="steps-block-item">
-                  <div class="steps-block-item-image">
-                    <div class="steps-block-item-image-circle">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.1289" cy="31.1104" r="31" fill="#F65E64"></circle><path d="M19 33.9404L28.5265 41.3875L45 19.4404" stroke="white" stroke-width="2" stroke-linecap="round"></path></svg>
-                    </div>
-                    <div class="steps-block-item-image-progress"></div>
+            <section class="features">
+              <div class="features-title">Дополнительные опции — за 30 ₽ в месяц каждая</div>
+              <div class="features-block">
+                <div class="features-block-item">
+                  <div class="features-block-item-image">
+                    <img src="img/debit_card/features_icon1.svg" alt="">
                   </div>
-                  <div class="steps-block-item-text">
-                    <div class="steps-block-item-text-desc">
-                      Откройте расчетный счет<br>
-                      в ДелоБанке
-                    </div>
+                  <div class="features-block-item-desc">
+                    Кэшбек до 1%
                   </div>
                 </div>
-                <div class="steps-block-item">
-                  <div class="steps-block-item-image">
-                    <div class="steps-block-item-image-circle">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.9902" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M16.2383 35.8883L21.5459 33.665" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M26.1241 38.877L23.6719 43.7374" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16 24.707L21.5454 26.8054" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.4326 27.7405L44.3688 25.54" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M36.3391 16.4404L34.0791 21.793" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23.9697 16.5L26.5271 21.9715" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.8682 41.7949L43.5544 45.8681" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M45.3644 37.1492L29.0674 29.1621L34.4998 46.3098L45.3644 37.1492Z" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"></path></svg>
-                    </div>
-                    <div class="steps-block-item-image-progress"></div>
+                <div class="features-block-item">
+                  <div class="features-block-item-image">
+                    <img src="img/debit_card/features_icon2.svg" alt="">
                   </div>
-                  <div class="steps-block-item-text">
-                    <div class="steps-block-item-text-desc">
-                      В личном кабинете<br>
-                      в разделе «Сервисы»<br>
-                      выберите «Эквайринг»
-                    </div>
+                  <div class="features-block-item-desc">
+                    10 бесплатных снятий в месяц
                   </div>
                 </div>
-                <div class="steps-block-item">
-                  <div class="steps-block-item-image">
-                    <div class="steps-block-item-image-circle">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="62" height="63" viewBox="0 0 62 63" fill="none"><circle cx="31" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path fill-rule="evenodd" clip-rule="evenodd" d="M40 44.5833H21C20.4477 44.5833 20 44.1356 20 43.5833V17.4404C20 16.8881 20.4477 16.4404 21 16.4404H33.7855V18.8378V19.6101C33.7855 21.8193 35.5763 23.6101 37.7855 23.6101H41V43.5833C41 44.1356 40.5523 44.5833 40 44.5833ZM39.5436 21.6101L35.7855 17.7422V18.8378V19.6101C35.7855 20.7147 36.6809 21.6101 37.7855 21.6101H39.5436ZM21 46.5833H40C41.6569 46.5833 43 45.2401 43 43.5833V23.515C43 22.7343 42.6957 21.9844 42.1517 21.4244L36.2497 15.3499C35.6848 14.7685 34.9087 14.4404 34.098 14.4404H21C19.3431 14.4404 18 15.7836 18 17.4404V43.5833C18 45.2401 19.3431 46.5833 21 46.5833Z" fill="#F65E64"></path><path d="M23 26.4404H27.9167H31" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23 31.4404H32.2188H38" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23 36.4404H28.5312H32" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                    </div>
-                    <div class="steps-block-item-image-progress"></div>
+                <div class="features-block-item">
+                  <div class="features-block-item-image">
+                    <img src="img/debit_card/features_icon3.svg" alt="">
                   </div>
-                  <div class="steps-block-item-text">
-                    <div class="steps-block-item-text-desc">
-                      Заполните<br>
-                      небольшую анкету
-                    </div>
-                  </div>
-                </div>
-                <div class="steps-block-item">
-                  <div class="steps-block-item-image">
-                    <div class="steps-block-item-image-circle">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="62" height="63" viewBox="0 0 62 63" fill="none"><circle cx="31" cy="31.8369" r="30.5" fill="white" stroke="#E6E8E0"></circle><rect x="19" y="20.4404" width="24" height="24" rx="2" stroke="#F65E64" stroke-width="2"></rect><path d="M19 26.9404H42.5" stroke="#F65E64" stroke-width="2"></path><path d="M24 18.4404V23.4404" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M38 18.4404V23.4404" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                    </div>
-                  </div>
-                  <div class="steps-block-item-text">
-                    <div class="steps-block-item-text-desc">
-                      Специалист банка<br>
-                      согласует с с вами время<br>
-                      и дату подключения
-                    </div>
+                  <div class="features-block-item-desc">
+                    СМС-информирование
                   </div>
                 </div>
               </div>
             </section>
             <section class="request">
-              <div class="request-title">Оформите заявку на эквайринг</div>
-              <div class="request-desc"></div>
+              <div class="request-title">Откройте счет за 10 минут</div>
+              <div class="request-desc">и принимайте платежи сразу</div>
               <form id="open_account_step1_page">
                 <div class="request-block">
                   <div class="request-block-phone">
@@ -344,7 +257,13 @@
               <div class="important-title">Важно знать</div>
               <div class="important-block">
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Что такое интернет эквайринг?</div>
+                  <div class="important-block-item-title">Вопрос 1</div>
+                  <div class="important-block-item-desc">
+                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">Вопрос 2</div>
                   <div class="important-block-item-desc">
                     Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
                   </div>
