--- a/internet-business.html
+++ b/internet-business.html
@@ -271,9 +271,11 @@
                 <div class="advantage-block">
                   <div class="advantage-block-item nopr fl-end">
                     <div class="advantage-block-item-text">
-                      Открытие счета <br>
-                      без походов <br>
-                      в банк и очередей
+                      <div class="advantage-block-item-text-desc">
+                        Открытие счета <br>
+                        без походов <br>
+                        в банк и очередей
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img1.png" alt="Открытие счета без походов в банк и очередей">
@@ -281,9 +283,11 @@
                   </div>
                   <div class="advantage-block-item nopr fl-end">
                     <div class="advantage-block-item-text">
-                      3 месяца бесплатной <br>
-                      бухгалтерии и отправки <br>
-                      отчетности в госорганы
+                      <div class="advantage-block-item-text-desc">
+                        3 месяца бесплатной <br>
+                        бухгалтерии и отправки <br>
+                        отчетности в госорганы
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img2.png" alt="3 месяца бесплатной бухгалтерии и отправки отчетности в госорганы">
@@ -291,17 +295,22 @@
                   </div>
                   <div class="advantage-block-item nopr">
                     <div class="advantage-block-item-text">
-                      Единый аккаунт <br>
-                      для личного <br>
-                      и бизнес счетов          </div>
+                      <div class="advantage-block-item-text-desc">
+                        Единый аккаунт <br>
+                        для личного <br>
+                        и бизнес счетов
+                      </div>
+                    </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img3.png" alt="Единый аккаунт для личного и бизнес счетов">
                     </div>
                   </div>
                   <div class="advantage-block-item">
                     <div class="advantage-block-item-text">
-                      Платежи и переводы <br>
-                      за 1 минуту
+                      <div class="advantage-block-item-text-desc">
+                        Платежи и переводы <br>
+                        за 1 минуту
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img4.png" alt="Платежи и переводы за 1 минуту">
@@ -309,9 +318,11 @@
                   </div>
                   <div class="advantage-block-item nopr">
                     <div class="advantage-block-item-text">
-                      На счёт можно <br>
-                      получать деньги <br>
-                      после резервирования
+                      <div class="advantage-block-item-text-desc">
+                        На счёт можно <br>
+                        получать деньги <br>
+                        после резервирования
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img5.png" alt="На счёт можно получать деньги после резервирования">
@@ -319,7 +330,10 @@
                   </div>
                   <div class="advantage-block-item">
                     <div class="advantage-block-item-text">
-                      Скидка на годовое обслуживание          </div>
+                      <div class="advantage-block-item-text-desc">
+                        Скидка на годовое обслуживание
+                      </div>
+                    </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img6.png" alt="Скидка на годовое обслуживание">
                     </div>
