--- a/trade-acquiring.html
+++ b/trade-acquiring.html
@@ -158,8 +158,10 @@
                 <div class="advantage-block">
                   <div class="advantage-block-item">
                     <div class="advantage-block-item-text">
-                      Подключение — <br>
-                      бесплатно
+                      <div class="advantage-block-item-text-desc">
+                        Подключение — <br>
+                        бесплатно
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img7.png" alt="Подключение — бесплатно">
@@ -167,9 +169,11 @@
                   </div>
                   <div class="advantage-block-item nopr">
                     <div class="advantage-block-item-text">
-                      Зачисляем средства <br>
-                      на расчетный счет <br>
-                      несколько раз в день
+                      <div class="advantage-block-item-text-desc">
+                        Зачисляем средства <br>
+                        на расчетный счет <br>
+                        несколько раз в день
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img8.png" alt="Зачисляем средства на расчетный счет несколько раз в день">
@@ -177,9 +181,11 @@
                   </div>
                   <div class="advantage-block-item">
                     <div class="advantage-block-item-text">
-                      Бесплатный терминал, <br>
-                      оплата только за обработку <br>
-                      безналичных платежей
+                      <div class="advantage-block-item-text-desc">
+                        Бесплатный терминал, <br>
+                        оплата только за обработку <br>
+                        безналичных платежей
+                      </div>
                     </div>
                     <div class="advantage-block-item-image">
                       <img src="img/adv_img9.png" alt="Бесплатный терминал, оплата только за обработку безналичных платежей">
