--- a/deposit_NOT_READY.html
+++ b/deposit_NOT_READY.html
@@ -153,10 +153,12 @@
               <div class="advantage-block">
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
-                    Зачисляет денежные <br>
-                    средства на счет каждые <br>
-                    4 часа или в удобное для <br>
-                    вас время
+                    <div class="advantage-block-item-text-desc">
+                      Зачисляет денежные <br>
+                      средства на счет каждые <br>
+                      4 часа или в удобное для <br>
+                      вас время
+                    </div>
                   </div>
                   <div class="advantage-block-item-image">
                     <img src="img/adv_img12.png" alt="Зачисляет денежные средства на счет каждые 4 часа или в удобное для вас время">
@@ -164,8 +166,10 @@
                 </div>
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
-                    Соответсвует <br>
-                    требованиям 54–ФЗ
+                    <div class="advantage-block-item-text-desc">
+                      Соответсвует <br>
+                      требованиям 54–ФЗ
+                    </div>
                   </div>
                   <div class="advantage-block-item-image">
                     <img src="img/adv_img13.png" alt="Соответсвует требованиям 54–ФЗ">
@@ -173,9 +177,11 @@
                 </div>
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
-                    Контролирует товарные <br>
-                    остатки и работу <br>
-                    сотрудников
+                    <div class="advantage-block-item-text-desc">
+                      Контролирует товарные <br>
+                      остатки и работу <br>
+                      сотрудников
+                    </div>
                   </div>
                   <div class="advantage-block-item-image">
                     <img src="img/adv_img14.png" alt="Контролирует товарные остатки и работу сотрудников">
