--- a/corporate-card.html
+++ b/corporate-card.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Дебетовая карта</title>
+    <title>Корпоративная карта</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,7 +118,7 @@
         </ul>
       </header>
       <main>
-        <div class="debit-card-page">
+        <div class="corporate-card-page">
           <div class="inner">
             <section class="top-banner pr50">
               <div class="top-banner-content">
@@ -130,17 +130,17 @@
                   </li>
                   <li class="bx-breadcrumb-item">
                     <a href="/">
-                      <span>Фрилансер</span>
+                      <span>Для малого бизнеса</span>
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <span>Дебетовая карта</span>
+                    <span>Корпоративная карта</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Дебетовая карта</h1>
+                  <h1 class="top-banner-content-text-title">Корпоративная карта</h1>
                   <div class="top-banner-content-text-desc">
-                    Удобная карта на каждый день с функцией бесконтактной оплаты
+                    Получайте бонусы, оплачивая картой товары и услуги
                   </div>
                   <div class="top-banner-content-text-open">
                     <a href="#">Открыть счет</a>
@@ -149,83 +149,106 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/debit_card/top_banner_img1.png" title="Дебетовая карта" alt="Дебетовая карта">
+                <img src="img/corporate_card/top_banner_img1.png" title="Корпоративная карта" alt="Корпоративная карта">
               </div>
             </section>
             <section class="advantage">
               <div class="advantage-block">
-                <div class="advantage-block-item nopr">
+                <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
-                    <div class="advantage-block-item-text-title">5,75%</div>
-                    <div class="advantage-block-item-text-desc">На остаток свыше 30 000 ₽</div>
+                    <div class="advantage-block-item-text-desc">
+                      Доставка — в день <br>
+                      открытия счета
+                    </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img15.png" alt="На остаток свыше 30 000 ₽">
+                    <img src="img/adv_img18.png" alt="Доставка — в день открытия счета">
                   </div>
                 </div>
                 <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
-                    <div class="advantage-block-item-text-title">до 0,5%</div>
-                    <div class="advantage-block-item-text-desc">Возвращаем на счет</div>
+                    <div class="advantage-block-item-text-desc">
+                      Комиссия за снятие <br>
+                      в банкоматах до 3%
+                    </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img16.png" alt="Возвращаем на счет">
+                    <img src="img/adv_img19.png" alt="Комиссия за снятие в банкоматах до 3%">
                   </div>
                 </div>
-                <div class="advantage-block-item nopr">
+                <div class="advantage-block-item">
                   <div class="advantage-block-item-text">
-                    <div class="advantage-block-item-text-title">без комиссии</div>
-                    <div class="advantage-block-item-text-desc">Снимайте деньги в банкоматах банков-партнеров</div>
+                    <div class="advantage-block-item-text-desc">
+                      Любая безналичная <br>
+                      оплата товаров и услуг
+                    </div>
                   </div>
                   <div class="advantage-block-item-image">
-                    <img src="img/adv_img17.png" alt="Снимайте деньги в банкоматах банков-партнеров">
+                    <img src="img/adv_img20.png" alt="Любая безналичная оплата товаров и услуг">
                   </div>
                 </div>
               </div>
             </section>
-            <section class="payment-system">
-              <div class="payment-system-text">
-                <div class="payment-system-text-desc">
-                  Подключите карту к системам <a href="#">Apple Pay</a>, <a href="#">Samsung Pay</a> или <a href="#">Google Pay</a> и оплачивайте покупки смартфоном
+            <section class="profit-spend">
+              <div class="profit-spend-badge">Бонусы</div>
+              <div class="profit-spend-content">
+                <div class="profit-spend-content-title">Выгодно тратить</div>
+                <ul class="profit-spend-content-list list-unstyled">
+                  <li>Регистрируйте бизнес-карту в программе Mastercard® Business Bonus* и получите 30 приветственных бонусов</li>
+                  <li>Обменивайте бонусы на скидки и специальные предложения от партнеров и снижайте расходы на бизнес.</li>
+                  <li>Подробнее <a href="https://business.mastercard.ru" target="_blank">business.mastercard.ru</a></li>
+                </ul>
+                <div class="profit-spend-content-desc">
+                  *Программа лояльности предоставляется MASTERCARD, все актуальные условия программы размещены на сайте <a href="https://business.mastercard.ru" target="_blank">business.mastercard.ru</a>
                 </div>
               </div>
-              <div class="payment-system-block">
-                <div class="payment-system-block-item">
-                  <img src="img/icon_applepay.svg" alt="">
-                </div>
-                <div class="payment-system-block-item">
-                  <img src="img/icon_googlepay.svg" alt="">
-                </div>
-                <div class="payment-system-block-item">
-                  <img src="img/icon_samsungpay.svg" alt="">
-                </div>
+              <div class="profit-spend-image">
+                <img src="img/corporate_card/profit_spend_img1.png" alt="">
               </div>
             </section>
-            <section class="features">
-              <div class="features-title">Дополнительные опции — за 30 ₽ в месяц каждая</div>
-              <div class="features-block">
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/debit_card/features_icon1.svg" alt="">
+            <section class="steps">
+              <div class="steps-title">Как получить?</div>
+              <div class="steps-block">
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.1289" cy="31.1104" r="31" fill="#F65E64"></circle><path d="M19 33.9404L28.5265 41.3875L45 19.4404" stroke="white" stroke-width="2" stroke-linecap="round"></path></svg>
+                    </div>
+                    <div class="steps-block-item-image-progress"></div>
                   </div>
-                  <div class="features-block-item-desc">
-                    Кэшбек до 1%
-                  </div>
-                </div>
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/debit_card/features_icon2.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    10 бесплатных снятий в месяц
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      Откройте расчетный <br>
+                      счет в ДелоБанке
+                    </div>
                   </div>
                 </div>
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/debit_card/features_icon3.svg" alt="">
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="62" viewBox="0 0 63 62" fill="none"><circle cx="31.877" cy="31" r="30.5" fill="white" stroke="#E6E8E0"></circle><rect x="14.5723" y="29.0894" width="34.6091" height="6.4727" rx="3" stroke="#F65E64" stroke-width="2"></rect><circle cx="20.5155" cy="32.3253" r="1.50284" fill="#F65E64"></circle><circle cx="43.2392" cy="32.3253" r="1.50284" fill="#F65E64"></circle><path d="M20.7256 38.9666V42.3925" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M43.4492 38.9666V42.3925" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M43.4488 26.1654L41.841 22.278C41.0677 20.4083 39.2438 19.189 37.2205 19.189H26.5935C24.5702 19.189 22.7464 20.4083 21.9731 22.278L20.3652 26.1654" stroke="#F65E64" stroke-width="2" stroke-linecap="round"></path></svg>
+                    </div>
+                    <div class="steps-block-item-image-progress"></div>
                   </div>
-                  <div class="features-block-item-desc">
-                    СМС-информирование
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      Сотрудник привезет <br>
+                      корпоративную карту <br>
+                      с договором
+                    </div>
+                  </div>
+                </div>
+                <div class="steps-block-item">
+                  <div class="steps-block-item-image">
+                    <div class="steps-block-item-image-circle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none"><circle cx="31.9902" cy="31.4551" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M16.2383 35.8883L21.5459 33.665" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M26.1241 38.877L23.6719 43.7374" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M16 24.707L21.5454 26.8054" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.4326 27.7405L44.3688 25.54" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M36.3391 16.4404L34.0791 21.793" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M23.9697 16.5L26.5271 21.9715" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M39.8682 41.7949L43.5544 45.8681" stroke="#F65E64" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M45.3644 37.1492L29.0674 29.1621L34.4998 46.3098L45.3644 37.1492Z" stroke="#F65E64" stroke-width="2" stroke-linejoin="round"></path></svg>
+                    </div>
+                  </div>
+                  <div class="steps-block-item-text">
+                    <div class="steps-block-item-text-desc">
+                      Активируйте карту <br>
+                      в личном кабинете
+                    </div>
                   </div>
                 </div>
               </div>
